[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/PlayerSQGlow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Experimental_Assets/star_07.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player.png" type="Texture" id=4]
[ext_resource path="res://Experimental_Assets/shield_silver.png" type="Texture" id=5]
[ext_resource path="res://Music/woosh1.ogg" type="AudioStream" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.284091 ), -2.07475, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.26
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.34
angular_velocity = 215.23
angular_velocity_random = 0.24
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
scale_random = 0.05
scale_curve = SubResource( 2 )
color = Color( 0.976471, 0.301961, 0.301961, 0.568627 )
hue_variation = 0.48
hue_variation_random = 0.65

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.26
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.34
angular_velocity = 215.23
angular_velocity_random = 0.24
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
scale_random = 0.05
scale_curve = SubResource( 2 )
color = Color( 0.396078, 0.396078, 0.396078, 0.415686 )
hue_variation = -1.0
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 44, 44 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 60
lifetime = 5.0
one_shot = true
speed_scale = 6.08
explosiveness = 1.0
randomness = 0.1
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Particles2D2" type="Particles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 30
lifetime = 3.0
one_shot = true
speed_scale = 7.0
explosiveness = 1.0
randomness = 0.1
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="Player" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="GlowEffect" type="Sprite" parent="Player"]
scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="E_dect" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="E_dect"]
shape = SubResource( 5 )

[node name="Dash_effect" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Shield" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 0.94902, 0.94902, 1 )
scale = Vector2( 0.771795, 0.771795 )
texture = ExtResource( 5 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="area_entered" from="E_dect" to="." method="_on_E_dect_area_entered"]
[connection signal="timeout" from="Dash_effect" to="." method="_on_Dash_effect_timeout"]
